gccida/g0/global_alloc
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/global.c:825:29: error: use of undeclared identifier 'eliminables_2'
eliminable_regset |= 1LL << eliminables_2[i].from; 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/global.c:826:22: error: subscripted value is not an array, pointer, or vector
if ( *(int *)0x779704[2 * i] == 7 && frame_pointer_needed || *(int *)0x779704[2 * i] == 7 && v1 ) 
             ~~~~~~~~^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/global.c:826:78: error: subscripted value is not an array, pointer, or vector
if ( *(int *)0x779704[2 * i] == 7 && frame_pointer_needed || *(int *)0x779704[2 * i] == 7 && v1 ) 
                                                                     ~~~~~~~~^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/global.c:827:32: error: use of undeclared identifier 'eliminables_2'
no_global_alloc_regs |= 1LL << eliminables_2[i].from; 
                               ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/global.c:881:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0 = (  struct allocno *)xcalloc( max_allocno, 0x40uLL); 
^~~~~~~~~
allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/global.c:887:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[( __int64)num].reg = ie; 
^~~~~~~~~
allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/global.c:891:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[( __int64)num].size = v4 / v5; 
^~~~~~~~~
allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/global.c:892:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[( __int64)num].calls_crossed += *( _DWORD *)( reg_n_info->data.l[ie] + 32); 
^~~~~~~~~
allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/global.c:893:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[( __int64)num].n_refs += *( _DWORD *)( reg_n_info->data.l[ie] + 16); 
^~~~~~~~~
allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/global.c:894:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[( __int64)num].freq += *( _DWORD *)( reg_n_info->data.l[ie] + 20); 
^~~~~~~~~
allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/global.c:895:6: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
if ( allocno_0[( __int64)num].live_length < *( _DWORD *)( reg_n_info->data.l[ie] + 28) ) 
     ^~~~~~~~~
     allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/global.c:896:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[( __int64)num].live_length = *( _DWORD *)( reg_n_info->data.l[ie] + 28); 
^~~~~~~~~
allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/global.c:940:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[*( ( unsigned __int8 *)cfun->emit->x_regno_reg_rtx[ig] + 2)] == MODE_COMPLEX_INT 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/global.c:941:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)cfun->emit->x_regno_reg_rtx[ig] + 2)] == MODE_COMPLEX_FLOAT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/global.c:977:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[ii].hard_reg_conflicts &= ~eliminable_regset; 
^~~~~~~~~
allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/global.c:978:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[ii].hard_reg_copy_preferences &= ~eliminable_regset; 
^~~~~~~~~
allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/global.c:979:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[ii].hard_reg_preferences &= ~eliminable_regset; 
^~~~~~~~~
allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/global.c:987:7: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
if ( !allocno_0[ik].size ) 
      ^~~~~~~~~
      allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/global.c:988:1: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
allocno_0[ik].size = 1; 
^~~~~~~~~
allocno
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/global_alloc/src/obj/global.o] Error 1
